deploy: 7997e525ac696d86ece5521db192c3af3687e008

--- a/index.html
+++ b/index.html
@@ -113,11 +113,6 @@
               <ul class="nav flex-column">
               </ul>
             </li>
-            
-            <li class="nav-item" data-level="1"><a href="#copyright-2020-st-jude-childrens-research-hospital" class="nav-link">Copyright 2020 St. Jude Children's Research Hospital</a>
-              <ul class="nav flex-column">
-              </ul>
-            </li>
         </ul>
     </div>
 </div></div>
@@ -315,7 +310,7 @@ for running and interpreting results is available in the <a href="https://stjude
 <h2 id="citation">Citation <a name="citation"></a></h2>
 <p>Tian, L., Li, Y., Edmonson, M.N. et al. CICERO: a versatile method for detecting complex and diverse driver fusions using cancer RNA sequencing data. Genome Biol 21, 126 (2020). https://doi.org/10.1186/s13059-020-02043-x</p>
 <h2 id="license">License <a name="license"></a></h2>
-<h1 id="copyright-2020-st-jude-childrens-research-hospital">Copyright 2020 St. Jude Children's Research Hospital</h1>
+<p>Copyright 2020 St. Jude Children's Research Hospital</p>
 <p>Licensed under a modified version of the Apache License, Version 2.0
 (the "License") for academic research use only; you may not use this
 file except in compliance with the License. To inquire about commercial
@@ -410,5 +405,5 @@ limitations under the License.</p></div>
 
 <!--
 MkDocs version : 1.1.2
-Build Date UTC : 2020-11-17 23:27:57.186384+00:00
+Build Date UTC : 2020-11-17 23:30:48.963802+00:00
 -->
