--- a/index.html
+++ b/index.html
@@ -152,13 +152,13 @@
     CICERO (Clipped-reads Extended for RNA Optimization) is an assembly-based algorithm to detect diverse classes
     of driver gene fusions from RNA-seq.
    <br />
-   <a href="https://stjudecloud.github.io/cicero/"><strong>Explore the docs »</strong></a>
+   <a href="https://stjude.github.io/cicero/"><strong>Explore the docs »</strong></a>
    <br />
    <a href="https://genomebiology.biomedcentral.com/articles/10.1186/s13059-020-02043-x"><strong>Read the paper »</strong></a>
    <br />
    <br />
-   <a href="https://github.com/stjudecloud/cicero/issues/new?assignees=&labels=&template=feature_request.md&title=Descriptive%20Title&labels=enhancement">Request Feature</a>
-   <a href="https://github.com/stjudecloud/cicero/issues/new?assignees=&labels=&template=bug_report.md&title=Descriptive%20Title&labels=bug">Report Bug</a>
+   <a href="https://github.com/stjude/cicero/issues/new?assignees=&labels=&template=feature_request.md&title=Descriptive%20Title&labels=enhancement">Request Feature</a>
+   <a href="https://github.com/stjude/cicero/issues/new?assignees=&labels=&template=bug_report.md&title=Descriptive%20Title&labels=bug">Report Bug</a>
    <br />
     ⭐ Consider starring the repo! ⭐
    <br />
@@ -405,5 +405,5 @@ limitations under the License.</p></div>
 
 <!--
 MkDocs version : 1.1.2
-Build Date UTC : 2020-11-17 23:30:48.963802+00:00
+Build Date UTC : 2020-11-17 23:35:14.603011+00:00
 -->
