--- a/index.html
+++ b/index.html
@@ -152,7 +152,7 @@
     CICERO (Clipped-reads Extended for RNA Optimization) is an assembly-based algorithm to detect diverse classes
     of driver gene fusions from RNA-seq.
    <br />
-   <a href="https://stjude.github.io/cicero/"><strong>Explore the docs »</strong></a>
+   <a href="https://stjude.github.io/CICERO/"><strong>Explore the docs »</strong></a>
    <br />
    <a href="https://genomebiology.biomedcentral.com/articles/10.1186/s13059-020-02043-x"><strong>Read the paper »</strong></a>
    <br />
@@ -405,5 +405,5 @@ limitations under the License.</p></div>
 
 <!--
 MkDocs version : 1.1.2
-Build Date UTC : 2021-01-19 16:37:58.671198+00:00
+Build Date UTC : 2021-01-19 17:51:22.784896+00:00
 -->
