--- a/index.html
+++ b/index.html
@@ -211,7 +211,7 @@
 <li><code>optimize</code> defaults to ON. This sets <code>sc_cutoff</code> to 3 for samples where the number of soft clip sites exceeds 200,000. It also sets <code>sc_shift</code> to 10 which sets the distance to consider events the same.</li>
 <li><code>-no-optimize</code> turns optimizations off. This can increase sensitivity, but increases the computational requirements.</li>
 </ul>
-<p>The final CICERO fusion result file will be located at <code>&lt;outdir&gt;/CICERO_DATADIR/&lt;sample name&gt;/final_fusions.txt</code>. Use the following <a href="https://www.stjude.cloud/docs/guides/genomics-platform/analyzing-data/rapid-rnaseq/">guide</a> to interpret the results.</p>
+<p>The final CICERO fusion result file will be located at <code>&lt;outdir&gt;/CICERO_DATADIR/&lt;sample name&gt;/final_fusions.txt</code>. Use the following <a href="https://university.stjude.cloud/docs/genomics-platform/workflow-guides/rapid-rnaseq/#interpreting-results">guide</a> to interpret the results.</p>
 <p>To visualize CICERO fusion output you can load the final fusion output file at https://proteinpaint.stjude.org/FusionEditor/.</p>
 <h2 id="dependencies">Dependencies <a name="dependencies"></a></h2>
 <ul>
@@ -254,7 +254,7 @@
 <p>See <a href="#running">Running CICERO</a> for details of the parameters.</p>
 <h2 id="running-with-st-jude-cloud">Running with St. Jude Cloud <a name="cloud"></a></h2>
 <p>CICERO is integrated in the St. Jude Cloud Rapid RNA-Seq workflow. To run CICERO in St. Jude Cloud, access the tool through the <a href="https://platform.stjude.cloud/workflows/rapid_rna-seq">platform page</a>. Documentation
-for running and interpreting results is available in the <a href="https://stjudecloud.github.io/docs/guides/genomics-platform/analyzing-data/rapid-rnaseq/">user guide</a>.</p>
+for running and interpreting results is available in the <a href="https://university.stjude.cloud/docs/genomics-platform/workflow-guides/rapid-rnaseq/">user guide</a>.</p>
 <h2 id="generate-junctions-file-with-rnapeg">Generate junctions file with RNApeg <a name="junctions"></a></h2>
 <p>RNApeg is required to generate a junctions file for use by CICERO. You can get RNApeg from both Docker and Singularity. Once RNApeg is complete, the <code>*.junctions.tab.shifted.tab</code> file can be provided to CICERO using the <code>-j</code> argument. </p>
 <h3 id="running-rnapeg-via-docker">Running RNApeg via Docker:</h3>
@@ -405,5 +405,5 @@ limitations under the License.</p></div>
 
 <!--
 MkDocs version : 1.1.2
-Build Date UTC : 2021-04-12 23:24:27.068089+00:00
+Build Date UTC : 2021-05-14 18:00:24.609465+00:00
 -->
